header added wrapping the nav to fix it to top

--- a/style.css
+++ b/style.css
@@ -170,10 +170,19 @@ button {
   max-width: 10rem;
 }
 
+/* HEADER */
+
+header {
+  margin-bottom: 4rem;
+}
+
 /* NAV */
 
 nav {
   display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
   justify-content: space-between;
   padding: 1rem;
 }
